vertical alignment and font-size fixes

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -16,10 +16,13 @@ $month-days:
 .calendar {
   display: flex;
   flex-wrap: wrap;
+  align-content: center;
   gap: 1px;
   width: $day-size * 7 + 20px;
+  height: 100vh;
   padding: 10px;
   margin: 0 auto;
+
 
   &__cell {
     box-sizing: border-box;
@@ -52,7 +55,7 @@ $month-days:
         &::before {
           content: '#{$i}';
           font-family: $number-font;
-          size: $number-size;
+          font-size: $number-size;
           line-height: $day-size;
           text-align: center;
           display: block;
